Update deploy base path for lp_2

--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build
         run: |
           npm ci
-          npm run build -- --base=/public/lp/
+          npm run build -- --base=/public/lp_2/
 
       - name: Guard dist
         run: |
